welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:-6: error: Missing closing brace `}' assumed here
try {
^maxMod5:1: error: expected class or object definition
def maxMod5(a:Int, b:Int):Int = { 
^